--- a/.github/workflows/hello_world.yaml
+++ b/.github/workflows/hello_world.yaml
@@ -2,12 +2,12 @@ name: hello-world
 
 on: push
 
-jobs: 
-  hello-world-job
+jobs:
+  hello-world-job:
 
     runs-on: ubuntu-latest
   
-    steps: 
+    steps:
       - name: check out respository code
         uses: actions/checkout@v4
       - run: echo "$(cat hello_world.txt)
