--- a/.github/workflows/build-test-deploy.yaml
+++ b/.github/workflows/build-test-deploy.yaml
@@ -28,3 +28,42 @@ jobs:
           node-version: '20'
       - run: npm install
       - run: npm test
+
+  deploy:
+     needs: test
+     runs-on: ubuntu-latest
+
+     permissions:
+       contents: write
+       pages: write
+       id-token: write
+
+    environment: 
+       name: production
+       url: ${{ steps.deployment.outputs.pages.url }} 
+    
+    runs-on: ubuntu-latest
+
+    steps: 
+      - name: Checkout repo
+        uses: actions/checkout@v4
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+      - name: use node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '20'
+      - name: configure github pages
+        uses: actions/configure-pages@v4
+        with:
+          static_site_directory: next
+      - run: npm install
+      - run: npm run build
+      - uses: actions/upload-artifact@v4
+        with:
+          path: './out'
+      - name: deploy 
+        id: deployment
+        uses: action/deploy-pages@v4
+
+    
